# cookiecutter-python

./: .flake8  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  .mypy.ini  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/{{ cookiecutter.pkg_name }}/: __init__.py  __main__.py
