[tool.poetry]
name = "cookie-cutter-python"
version = "0.1.0"
description = ""
authors = ["Timothy McFadden <mtik00@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
